# FPraktikum_601

./: .gitignore  README.md  pyproject.toml  version.py
FPraktikum_601/: main.py
FPraktikum_601/calculate_vlsr/: calculate_vlsr.py
FPraktikum_601/config/: config.py
FPraktikum_601/convert_spectrum/: convert_spectrum.py
docs/source/: Advanced.rst
