[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FPraktikum_601"
dynamic = ["version"]
description = "Development Status :: 4 - Beta"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
authors = [
    { name = "P. Kamphuis", email = "peterkamphuisastronomy@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [  'numpy>=1.14',
    'scipy',
    'astropy',
    'omegaconf>=2.2.2',
    'matplotlib',
    'future-fstrings',
    'psutil'

]

[project.urls]
Homepage = "https://github.com/PeterKamphuis/FPraktikum_601"

[project.scripts]
raw_to_clean_spectrum = "FPraktikum_601.main:main"
calculate_vlsr =  "FPraktikum_601.main:get_vlsr"

[tool.hatch.version]
path = "version.py"



[tool.hatch.build.targets.sdist]
include = [
    "/FPraktikum_601",
]
